--- a/Natural/7 Natural Wonders.html
+++ b/Natural/7 Natural Wonders.html
@@ -7,9 +7,8 @@
   </head>
   <body>
    <p class="heading">8 Natural Wonders</p>
-    <h1> HI! </h1>
-     <p>Welcome to my website about 8 natural wonders.
-  Here you can see and learn more about some beautiful places in this world. Enjoy!</p>
+     <p>Hi there! Welcome to my website about 8 Natural Wonders.
+  Here you can see and learn facts about some beautiful and natural places in this world. Enjoy looking around!</p>
    <h4>Aquatic Wonders:</h4>
         <h3><img src="aquatic.jpg" width="600" height="400px"><br></h3>
         <h2>Click here to view:</h2>
