Update 7 Natural Wonders.html

--- a/Natural/7 Natural Wonders.html
+++ b/Natural/7 Natural Wonders.html
@@ -10,18 +10,18 @@
      <p>Hi there! Welcome to my website about 8 Natural Wonders.
   Here you can see and learn facts about some beautiful and natural places in this world. Enjoy looking around!</p>
    <h4>Aquatic Wonders:</h4>
-        <h3><img src="aquatic.jpg" width="600" height="400px"><br></h3>
+        <h3><img src="./aquatic.jpg" width="600" height="400px"><br></h3>
         <h2>Click here to view:</h2>
       <h2><a href="./Natural Wonder 1.html" target="_self"> The Great Barrier Reef</a><br></h2>
       <h2><a href="./Natural Wonder 3.html" target="_self">The Bigar Waterfall</a><br></h2>
    <h4>Mountain Wonders:</h4>
-        <h3><img src="mountain.jpg" width="550" height="400px"><br></h3>
+        <h3><img src="./mountain.jpg" width="550" height="400px"><br></h3>
         <h2>Click here to view:</h2>
       <h2><a href="./Natural Wonder 4.html" target="_self">Mount Matterhorn</a><br></h2>
       <h2><a href="./Natural Wonder 5.html" target="_self">Meteora Monasteries</a><br></h2>
       <h2><a href="./Natural Wonder 6.html" target="_self">Mount Hallasan</a><br></h2>
    <h4>Coastal Wonders:</h4>
-        <h3><img src="coastal.jpg" width="550" height="300px"><br></h3>
+        <h3><img src="./coastal.jpg" width="550" height="300px"><br></h3>
         <h2>Click here to view:</h2>
         <h2><a href="./Natural Wonder 7.html" target="_self">Milford Sound</a><br></h2>
         <h2><a href="./Natural Wonder 2.html" target="_self">Ha Long Bay</a><br></h2>
