--- a/Natural/7 Natural Wonders.html
+++ b/Natural/7 Natural Wonders.html
@@ -15,7 +15,7 @@
       <h2><a href="./Natural Wonder 1.html" target="_self"> The Great Barrier Reef</a><br></h2>
       <h2><a href="./Natural Wonder 3.html" target="_self">The Bigar Waterfall</a><br></h2>
    <h4>Mountain Wonders:</h4>
-        <h3><img src="./mountain.jpg" width="550" height="400px"><br></h3>
+        <h3><img src="./Mountain.jpg" width="550" height="400px"><br></h3>
         <h2>Click here to view:</h2>
       <h2><a href="./Natural Wonder 4.html" target="_self">Mount Matterhorn</a><br></h2>
       <h2><a href="./Natural Wonder 5.html" target="_self">Meteora Monasteries</a><br></h2>
