--- a/Natural/7 Natural Wonders.html
+++ b/Natural/7 Natural Wonders.html
@@ -12,19 +12,19 @@
    <h4>Aquatic Wonders:</h4>
         <h3><img src="./aquatic.jpg" width="600" height="400px"><br></h3>
         <h2>Click here to view:</h2>
-      <h2><a href="./Natural Wonder 1.html" target="_self"> The Great Barrier Reef</a><br></h2>
-      <h2><a href="./Natural Wonder 3.html" target="_self">The Bigar Waterfall</a><br></h2>
+      <h2><a href="./Wonder 1.html" target="_self"> The Great Barrier Reef</a><br></h2>
+      <h2><a href="./Wonder 3.html" target="_self">The Bigar Waterfall</a><br></h2>
    <h4>Mountain Wonders:</h4>
         <h3><img src="./Mountain.jpg" width="550" height="400px"><br></h3>
         <h2>Click here to view:</h2>
-      <h2><a href="./Natural Wonder 4.html" target="_self">Mount Matterhorn</a><br></h2>
-      <h2><a href="./Natural Wonder 5.html" target="_self">Meteora Monasteries</a><br></h2>
-      <h2><a href="./Natural Wonder 6.html" target="_self">Mount Hallasan</a><br></h2>
+      <h2><a href="./Wonder 4.html" target="_self">Mount Matterhorn</a><br></h2>
+      <h2><a href="./Wonder 5.html" target="_self">Meteora Monasteries</a><br></h2>
+      <h2><a href="./Wonder 6.html" target="_self">Mount Hallasan</a><br></h2>
    <h4>Coastal Wonders:</h4>
         <h3><img src="./coastal.jpg" width="550" height="300px"><br></h3>
         <h2>Click here to view:</h2>
-        <h2><a href="./Natural Wonder 7.html" target="_self">Milford Sound</a><br></h2>
-        <h2><a href="./Natural Wonder 2.html" target="_self">Ha Long Bay</a><br></h2>
-        <h2><a href="./Natural Wonder 8.html" target="_self">Cape of Good Hope</a><br></h2>
+        <h2><a href="./Wonder 7.html" target="_self">Milford Sound</a><br></h2>
+        <h2><a href="./Wonder 2.html" target="_self">Ha Long Bay</a><br></h2>
+        <h2><a href="./Wonder 8.html" target="_self">Cape of Good Hope</a><br></h2>
   </body>
 </html>
