--- a/Beginning Programs/prg1.htm
+++ b/Beginning Programs/prg1.htm
@@ -3,14 +3,14 @@
 <title>My First Webpage</title>
 </head>
 <body>
-<p>My <u>first</u> Webpage by MICAELA</p>
+<p>My <u>first</u> Webpage by ME</p>
 <p><b>Hi there!</b> You are visiting the first ever webpage that I made.
-I hope you like it and <i>have fun!</i> -Micaela</p>
+I hope you like it and <i>have fun!</i> -Me</p>
 <h1>Welcome to My Photo Gallery!</h1>
 <h3>I am talking cool photos!</h3>
 <h4>Come back and find them soon!</h4>
 <h2>Send me an email if you like this webpage</h2>
-<h5>My email is micaelasgallery@gmail.com</h5>
+<h5>My email is mygallery@gallery.com</h5>
 <h3>Here are some interesting facts to know:</h3>
 
 <p>Water is represented by H<sub>2</sub>O in chemistry</p>
